--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body, html {
   margin: 0 auto;
   display: block;
   text-align: center;
+  background: url("../images/white-wood.jpg") no-repeat fixed;
+  background-size: cover;
 }
 
 .container, h1 {
@@ -23,6 +25,7 @@ h4 {
 }
 
 .amiable {
+  background: linear-gradient(to right, #338a46, #30ff5e);
   border: 1px solid #22aa44;
   box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
   background-color: #44cc66;
@@ -30,10 +33,16 @@ h4 {
 }
 
 .indifferent {
+  background: linear-gradient(to right, #bfbd2a, #fffc42);
+  border: 1px solid #22aa44;
+  box-shadow:  -1px 1px yellow, -2px 2px yellow, -3px 3px yellow, -4px 4px yellow, -5px 5px yellow;
   background-color: #dddd22;
 }
 
 .dubious {
+  background: linear-gradient(to right, #b0352a, #ff4d3d);
+  border: 1px solid #22aa44;
+  box-shadow:  -1px 1px red, -2px 2px red, -3px 3px red, -4px 4px red, -5px 5px red;
   background-color: #dd4444;
 }
 
@@ -45,12 +54,16 @@ h4 {
 .small {
   width: 100%;
   height: 100%;
+  border: 1px solid gray;
 }
 
 .med {
   width: 203.5%;
+  border: 1px solid gray;
+
 }
 
 .large {
+  border: 1px solid gray;
   width: 303%;
 }
